package me.palla.input;

public interface InputData {
}
